--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     build:
       commands:
         - npm build
-        - npm test
+        - npm run test
 artifacts:
   files:
     - src/**/*
