Get unit tests running - update yaml file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,13 @@ phases:
   install:
     runtime-versions:
       nodejs: 12
-    pre-build:
-      commands:
-        - npm install
-    build:
-      commands:
-        - npm build
-        - npm run test
+  pre-build:
+    commands:
+      - npm install
+  build:
+    commands:
+      - npm build
+      - npm test
 artifacts:
   files:
     - src/**/*
